<resources>
    <string name="app_name">FriendHub</string>
    <string name="default_web_client_id">714353258101-nedaiobtpl5dea9659236fsmank7brci.apps.googleusercontent.com</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="block_user">Block User</string>
    <string name="mute">Mute</string>
    <string name="report">Report</string>
    <string name="todo">todo</string>
    <string name="select_from">Select from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a comment ..</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="create_a_post">Create a Post</string>
    <string name="what_s_on_your_mind">What’s on your mind?</string>
    <string name="publish">Publish</string>
    <string name="add_friend">Add Friend</string>
    <string name="close">Close</string>
    <string name="select_birthdate">Select Birthdate</string>
    <string name="ok">OK</string>
    <string name="about_you">About you</string>
    <string name="describe_yourself_in_a_few_words">Describe yourself in a few words..</string>
    <string name="share_a_few_details_about_yourself_nto_help_your_friends_get_to_know_you_better">Share a few details about yourself\nto help your friends get to know you better.</string>
    <string name="continue2">Continue</string>
    <string name="your_birthdate">Your Birthdate</string>
    <string name="please_share_your_birthdate_nso_we_can_display_your_age_to_your_friends">Please share your birthdate\nso we can display your age to your friends!</string>
    <string name="typing">Typing...</string>
    <string name="type_a_message">Type a message</string>
    <string name="_00_00">00:00</string>
    <string name="you_don_t_have_any_chats_yet">You don’t have any chats yet</string>
    <string name="friend_hub">Friend Hub</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="birthdate">Birthdate</string>
    <string name="click_to_select_date">Click to select date</string>
    <string name="about">About</string>
    <string name="tell_us_more_about_you">Tell us more about you</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="update">Update</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="requests">Requests</string>
    <string name="friends">Friends</string>
    <string name="you_don_t_have_friends_yet">You don\'t have friends yet</string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="let_your_friends_know_your_gender_nit_will_be_show_only_for_your_friends">Let your friends know your gender\nIt will be show only for your friends</string>
    <string name="upload_your_photo">Upload Your Photo</string>
    <string name="this_photo_will_be_shown_only_to_your_friends">This photo will be shown only to your friends.</string>
    <string name="where_are_you_located_nthis_helps_us_connect_you_with_nearby_friends">Where are you located?\nThis helps us connect you with nearby friends!</string>
    <string name="connect_with_friends_and_enjoy_your_nspecial_social_space">Connect with friends and enjoy your\nspecial social space!</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="home">Home</string>
    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="tell_us_your_name_nonly_your_friends_will_be_able_to_see_it">Tell us your name!\nOnly your friends will be able to see it.</string>
    <string name="share_profile">Share Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="about_me">About me:</string>
    <string name="distance">Distance</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="preferences">Preferences</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="support">Support</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="account">Account</string>
    <string name="user_profile">User Profile</string>
    <string name="about_">About:</string>
    <string name="chat_with">Chat with .....</string>
    <string name="user_name">User Name</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="no_posts_yet">No posts yet</string>
</resources>