<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/select_from"
        android:textColor="@color/color5"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/cameraLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_add_a_photo_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/camera"
            android:textSize="19sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="5dp"
        android:background="@color/color5" />

    <LinearLayout
        android:id="@+id/galleryLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_image_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/gallery"
            android:textSize="19sp" />

    </LinearLayout>

</LinearLayout>
