<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color7"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_a_post"
        android:textColor="@color/color5"
        android:textSize="30sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_add_a_photo_24" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#1A1995AD"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircularImageView2" />

    </FrameLayout>

    <EditText
        android:id="@+id/postEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background3"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:hint="@string/what_s_on_your_mind"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textColor="@color/color4"
        android:textSize="18sp" />

    <Button
        android:id="@+id/publishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/color5"
        android:text="@string/publish"
        android:textColor="@color/white" />

</LinearLayout>
