<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color7"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:padding="5dp"
            android:src="@drawable/thin_arrow_left_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/profile_edit"
            android:textColor="@color/color5"
            android:textSize="20sp" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color4"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/baseline_add_a_photo_24"
                    android:visibility="gone" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#1A1995AD"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/CircularImageView" />

                <ProgressBar
                    android:id="@+id/ImageProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />


            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/name"
                android:textSize="15sp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:textColorHint="#E1E1E1"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/birthdate"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/birthdateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/click_to_select_date"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:textColorHint="#E1E1E1"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/about"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/aboutEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background2"
                android:gravity="top"
                android:hint="@string/tell_us_more_about_you"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:maxLines="3"
                android:minLines="3"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:textColorHint="#E1E1E1"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/gender"
                android:textSize="15sp" />

            <FrameLayout
                android:id="@+id/maleFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gender_grey_background"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/femaleFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/gender_grey_background"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/notToSayFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:background="@drawable/gender_grey_background"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/prefer_not_to_say"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </FrameLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="90dp"
                android:elevation="10dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/color5"
                app:cardCornerRadius="45dp"
                app:cardElevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nextConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/updateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_effect"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:paddingHorizontal="60dp"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:textSize="23sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>


</LinearLayout>