<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color7"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome_back"
        android:textColor="@color/color5"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edittext_background2"
            android:hint="@string/email"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/white"
            android:textColorHint="#E1E1E1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edittext_background2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/white"
            android:textColorHint="#E1E1E1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/log_in_to_your_account"
        android:textColor="@color/color4"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/SignUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/color5" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="90dp"
        android:elevation="10dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/color5"
        app:cardCornerRadius="45dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signInTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingHorizontal="60dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>